--- a/index.html
+++ b/index.html
@@ -7,44 +7,31 @@
     <link rel="stylesheet" href="styles.css">
     <title>Felinos Digitais</title>
 </head>
+
+<header>
+    <div class="jumbotron text-center">
+        <h1 id="titulo" style="font-weight: bold;">Felinos Digitais</h1>
+        <h3>Aqui você encontra imagens aleatórias de gatos peculiares!</h3>
+    </div>
+</header>
 <body>
-    <header>
-        <div class="jumbotron text-center">
-            <h1 id="titulo" style="font-weight: bold;">Felinos Digitais</h1>
-            <h3>Aqui você encontra imagens aleatórias de gatos peculiares!</h3>
-        </div>
-    </header>
-    <div class="container d-flex justify-content-center align-items-center" style="min-height: 80vh;">
+    <div class="container d-flex justify-content-center align-items-center">
         <div class="shadow-box p-4 bg-white rounded">
             <h3 class="text-center">Consiga sua Imagem de gato</h4>
-            <h5 class="text-center">Será que você consegue ter a sorte de encontrar uma imagem interessante?</h5>
-            <h6>Apenas com o clique de um <button type="button" class="btn btn-primary text-center" onclick="sorteioGato()">Botão</button>, sorteie uma imagem de gato de uma infinidade de possibilidades na internet</h6>
+            <h5 class="text-center">Será que você consegue uma imagem interessante?</h5>
+            <!--essas tags com id "desktop" e "mobile" são o que diferenciam a exibição do botão nos dispositivos. Em resumo: no desktop o botão aparece no final de uma frase, no mobile, tem uma quebra de linha só para o botão ficar centralizado.-->
+            <h6 id="desktop" class="text-center hidden">Apenas com o clique de um <button type="button" class="btn btn-primary text-center" onclick="sorteioGato()">Botão</button><br> sorteie uma imagem de gato de uma infinidade de possibilidades na internet</h6>
+            <div id="mobile" class="hidden">
+                <h6 class="text-center"><button type="button" class="btn btn-primary text-center" style="margin: 5px; ;" onclick="sorteioGato()">Apenas com o clique de um Botão</button><br> Sorteie uma imagem de gato de uma infinidade de possibilidades na internet</h6>
+            </div>
             <p class="text-center" style="font-style: italic;"> PS: A imagem pode demorar alguns segundos para aparecer</p>
             <div class="image-container">
                 <img id="my_image" class="img-fluid rounded align-items-center">
-            </div>
-            <div class="retry">
-                
             </div>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script>
-        function sorteioGato() {
-            fetch('https://cataas.com/cat?type=small&position=center')
-                .then(response => {
-                    if (response.ok) {
-                        return response.blob(); // Nota 1: Professor, aparentemente essa API retorna um PNG ao invés de um JSON, então usei esse blob que não faço ideia pra que serve, mas o chat gpt mandou usar
-                    }
-                    throw new Error('Erro ao buscar imagem');
-                })
-                .then(blob => {
-                    const imageUrl = URL.createObjectURL(blob);
-                    document.getElementById('my_image').setAttribute('src', imageUrl); // Nota 2: Aparentemente fui sortudo o suficiente pra escolher uma API assim, maioria dos tutoriais do youtube são de API's que retornam em JSON, passei horas tentando fazer o metodo de converter pra JSON quando na verdade o conteudo da resposta era binário, só depois de mais horas pesquisando, descobri o metodo blob para respostas binarias, ou no meu infeliz caso, imagens :)
-                })
-                .catch(error => console.error('Erro:', error)); // Nota 3: Pelo menos eu acho que essa vai ser uma história engraçada para contar em uma aula kkkkkkkk
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
