--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Felinos Digitais</title>
+    <link rel="icon" type="image/jpg" href="AppIcons/android/mipmap-xxxhdpi/catIcon.png"/>
 </head>
 
 <header>
@@ -14,6 +15,7 @@
         <h3>Aqui você encontra imagens aleatórias de gatos peculiares!</h3>
     </div>
 </header>
+
 <body>
     <div class="container d-flex justify-content-center align-items-center">
         <div class="shadow-box p-4 bg-white rounded">
