--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>Felinos Digitais</title>
-    <link rel="icon" type="image/jpg" href="AppIcons/android/mipmap-xxxhdpi/catIcon.png"/>
+    <link rel="manifest" href="manifest.json">
+    <title>Gerador de Gatos</title>
+    <link rel="icon" type="image/jpg" href="Icons/180.png"/>
 </head>
 
 <header>
     <div class="jumbotron text-center">
-        <h1 id="titulo" style="font-weight: bold;">Felinos Digitais</h1>
-        <h3>Aqui você encontra imagens aleatórias de gatos peculiares!</h3>
+        <h1 id="titulo" style="font-weight: bold;">Gerador de Gatos</h1>
+        <h3>Aqui você encontra imagens aleatórias de felinos peculiares!</h3>
     </div>
 </header>
 
